# github_agent

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  README.md  pyproject.toml
sql/: 002_capabilities.sql
src/: cli.py  config.py  llm.py
src/agent/: __init__.py  core.py  executor.py  planner.py
src/capabilities/: __init__.py  seed.py  synthesizer.py
src/learning/: __init__.py  feedback_loop.py
src/memory/: __init__.py  capability_memory.py  execution_memory.py
src/tools/: __init__.py  github_client.py
supabase/: config.toml
supabase/migrations/: 20260701051043_create_execution_logs.sql  20260701051134_create_learning_metrices.sql
